tests/spec/emit/snapshots/fused_go_result_if_let_ok.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:os"
  import "go:fmt"
  
  fn test(name: string) {
    if let Ok(info) = os.Stat(name) {
      fmt.Println(info.Name())
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"os"
)

func test(name string) {
	if info, err := os.Stat(name); err == nil && !lisette.IsNilInterface(info) {
		fmt.Println(info.Name())
	}
}
