tests/spec/emit/snapshots/fused_go_result_let_else_discarded_payload.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:os"
  
  fn test(name: string) -> bool {
    let Ok(_) = os.Stat(name) else {
      return false
    }
    true
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"os"
)

func test(name string) bool {
	if ret, err := os.Stat(name); err != nil || lisette.IsNilInterface(ret) {
		return false
	}
	return true
}
