tests/spec/emit/snapshots/fused_go_result_let_else_pointer_return.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:net/url"
  
  fn test(raw: string) -> string {
    let Ok(parsed) = url.Parse(raw) else {
      return "bad"
    }
    parsed.Scheme
  }
---
package main

import "net/url"

func test(raw string) string {
	parsed, err := url.Parse(raw)
	if err != nil || parsed == nil {
		return "bad"
	}
	return parsed.Scheme
}
