tests/spec/emit/snapshots/fused_go_result_let_else_shadows_outer_binding.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:strconv"
  import "go:fmt"
  
  fn test(text: string) -> int {
    let parsed = "outer"
    fmt.Println(parsed)
    let Ok(parsed) = strconv.Atoi(text) else {
      return -1
    }
    parsed
  }
---
package main

import (
	"fmt"
	"strconv"
)

func test(text string) int {
	parsed := "outer"
	fmt.Println(parsed)
	parsed_1, err := strconv.Atoi(text)
	if err != nil {
		return -1
	}
	return parsed_1
}
