tests/spec/emit/snapshots/fused_go_result_let_else_without_nil_guard.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:strconv"
  
  fn test(text: string) -> int {
    let Ok(parsed) = strconv.Atoi(text) else {
      return -1
    }
    parsed
  }
---
package main

import "strconv"

func test(text string) int {
	parsed, err := strconv.Atoi(text)
	if err != nil {
		return -1
	}
	return parsed
}
