tests/spec/emit/snapshots/fused_lisette_result_let_else.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:errors"
  
  fn fallible(ok: bool) -> Result<int, error> {
    if ok { Ok(1) } else { Err(errors.New("nope")) }
  }
  
  fn test() -> int {
    let Ok(x) = fallible(true) else {
      return -1
    }
    x
  }
---
package main

import "errors"

func fallible(ok bool) (int, error) {
	if ok {
		return 1, nil
	}
	return 0, errors.New("nope")
}

func test() int {
	x, err := fallible(true)
	if err != nil {
		return -1
	}
	return x
}
